--- a/src/components/services/reviews.css
+++ b/src/components/services/reviews.css
@@ -24,6 +24,21 @@
   margin-bottom: 6px;
 }
 
+.all-reviews {
+  text-decoration: none;
+  font-family: Forum;
+  font-size: 20px;
+  color: var(--black-color);
+  justify-content: center;
+  display: flex;
+  margin-bottom: 40px;
+}
+
+.all-reviews:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 1px; /* Толщина линии */
+}
+
 @media (max-width: 760px) {
     .review {
         width: 620px;
