--- a/src/styles/components_styles/header.css
+++ b/src/styles/components_styles/header.css
@@ -262,9 +262,9 @@
     color: var(--red-color);
 }
 
-/* Кнопка записи - ПРОСТАЯ АНИМАЦИЯ */
+/* Кнопка записи */
 .burger-bottom {
-    margin-top: 20px;
+    margin-top: 10px;
     flex-shrink: 0;
 }
 
@@ -332,7 +332,7 @@
     
     .burger-link {
         font-size: 1rem;
-        padding: 10px 0;
+        padding: 8.5px 0;
     }
     
     .phone-link {
