--- a/src/components/services/additional_services/additional_services_component.module.css
+++ b/src/components/services/additional_services/additional_services_component.module.css
@@ -110,6 +110,10 @@
   line-height: 1.6;
 }
 
+.priceTitle {
+  text-align: left; /* Выравнивание текста внутри элемента по левому краю */
+}
+
 /* PRICES */
 .prices {
   font-size: 20px;
